# OpenMC

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.txt  sdkconfig  sdkconfig.old
include/: core0_stall.h  esp_common.h  esp_file_helper.h  esp_sdcard.h  esp_wifi_ap.h  (+10 more)
src/: CMakeLists.txt  bare_metal_app_cpu.c  component.mk  esp_file_helper.cc  esp_file_server.cc  esp_logging.cc  esp_logging.h  esp_main.cc  esp_sdcard.cc  esp_wifi_ap.cc  esp_wifi_client.cc  logging.cc  main.cc  npiso.c  oled.c  oled.cc  pins.h  sio.cc  sio_controller.cc  sio_memory_card.cc  sio_net_yaroze.cc  spi.cc  startup.c  upload_script.html
src/baremetal_core1/: bare_metal_app_cpu.c  bare_metal_app_cpu.h  core0_stall.c  core0_stall.h  startup.c
src/gui/: gui.cc  gui.h
src/oled/: 6x6font.h  oled.cc  oled.h  ssd1306.cc  ssd1306.h  ssd1366.h
src/playstation/: memory_card_data.cc  sio.cc  sio.h  sio_controller.cc  sio_controller.h  sio_memory_card.cc  sio_memory_card.h  sio_net_yaroze.cc  sio_net_yaroze.h  spi.cc  spi.h
src/storage/: config.cc  config.h  esp_file_helper.cc  esp_file_helper.h  esp_file_server.cc  esp_file_server.h  esp_sdcard.cc  esp_sdcard.h  file_helper.cc  file_helper.h  sdcard.cc  sdcard.h  spiffs.cc  spiffs.h  storage.cc  storage.h
src/system/: settings.cc  settings.h  timer.cc  timer.h
src/tcp_server/: tcp.cc
src/touch_input/: touch.cc  touch.h
src/web/: file_server.cc  file_server.h  percent_decode.cc  percent_decode.h
src/wifi/: access_point.cc  access_point.h  client.cc  client.h  esp_wifi_ap.cc  esp_wifi_ap.h  esp_wifi_client.cc  wifi.cc  wifi.h
(+22 files in other folders)
